--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@reduxjs/toolkit": "^2.4.0",
     "@tanstack/react-query": "^5.62.2",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -35,6 +36,8 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-router": "^7.0.2",
+    "react-router-dom": "^7.0.2",
     "shadcn-ui": "^0.9.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
