--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -44,10 +45,13 @@
     "react-redux": "^9.1.2",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
+    "serve": "^14.2.4",
     "shadcn-ui": "^0.9.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "vite": "^5.4.10"
+    
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
