--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
 runtime: nodejs20
 
 env_variables:
-  VITE_API_URL =https://api-tiketku-travelynk-145227191319.asia-southeast1.run.app/api/v1
+VITE_API_URL: "https://api-tiketku-travelynk-145227191319.asia-southeast1.run.app/api/v1"
